feat: rewrite PathPitchStabilizer as spring-damper
Replace step-based pitch stabilizer (deadband + maxStep + snap-to-neutral)
with a velocity spring-damper that runs every game tick, with overshoot
prevention via velocity clamping. Update PathRotationController call sites
to use the new tick(float, boolean) / reset(float) / getStablePitch() API.